--- a/homebridge-ui/public/index.html
+++ b/homebridge-ui/public/index.html
@@ -13,7 +13,7 @@
       <li class="mb-3">Select <strong>the SwitchBot Device you would like to add to homebridge</strong>.</li>
       <li class="mb-3">Select the settings gear in the top right.</li>
       <li class="mb-3">Select Device info.</li>
-      <li class="mb-3">Copy the BLE Mac and input into the Mac Address - Bluetooth field on the next page.</li>
+      <li class="mb-3">Copy the BLE Mac and input into the MAC Address - Bluetooth field on the next page.</li>
    </ol>
    <div class="text-center">
       <button type="button" class="btn btn-primary" id="introLink">Continue &rarr;</button>
